--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,2 @@
-streamlit==1.36.0
-ipykernel==6.29.4
-ipython==8.18.1
-joblib==1.4.2
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
-numpy==1.26.4
-openpyxl==3.1.2
-pandas==2.2.2
-plotly==5.22.0
-plotnine==0.13.6
-scikit-learn==1.5.0
-seaborn==0.13.2
+streamlit
+ydata_profiling
